Fix Image Stretching | Add Pagination in Transaction

--- a/storage/app/asset/css/item-card.css
+++ b/storage/app/asset/css/item-card.css
@@ -9,6 +9,19 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
 }
 
+.card-img-frame {
+    /* width: 150px;
+    height: 150px; */
+    overflow: hidden;
+    position: relative;
+}
+
+.card-img-frame>.card-img {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
 .card-body>h5 {
     color: #0e469a;
 }
